# ensembl-metadata-microservice

./: MainLib.py  OrganismLib.py  README.md  config.py  pyproject.toml  requirements.txt  run.py  runf.py  test.py
databases/: __init__.py  local_response.py  organism_source.py
tests/: test_databases.py  test_db_choice.py
